Fix styles in fixed menu on mobile screens

--- a/src/components/Fixed menu/0px-599px.scss
+++ b/src/components/Fixed menu/0px-599px.scss
@@ -2,58 +2,33 @@
 
 @media only screen and (max-width: 599px) {
   .fixed-menu {
-    width: clamp(51.787px, 16.783vw, 100px);
-    height: clamp(51.787px, 16.783vw, 100px);
-    border-radius: 200px;
+    width: clamp(60.343px, 16.183vw, 100px);
+    height: clamp(60.343px, 16.183vw, 100px);
+    background: $c1-H;
     border: 2px $c1-D solid;
+    border-radius: 100px;
+    cursor: pointer;
+    position: fixed;
+    bottom: clamp(11px, 4vw, 17px);
+    right: clamp(11px, 4vw, 17px);
+    z-index: 30;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: $c1-H;
-    cursor: pointer;
-    position: fixed;
-    bottom: clamp(15px, 4vw, 17px);
-    right: clamp(15px, 4vw, 17px);
-    z-index: 30;
 
-    &__icon-container-basket {
-      width: 100%;
-      height: 63.573%;
-      margin: 0 4vw;
-      position: relative;
-      cursor: pointer;
+    &__icon {
+      width: 45.955%;
+      margin-bottom: 6%;
     }
 
-    &__icon-basket {
-      width: 80.015;
-      height: 76.6%;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-
-    &__basket-counter {
-      width: auto;
-      min-width: 18.179%;
-      height: 51.072%;
-      padding: 0 20%;
+    &__point {
+      width: clamp(9px, 3.864vw, 16px);
+      height: clamp(9px, 3.864vw, 16px);
+      border-radius: 100px;
       background: $c4-A;
       position: absolute;
-      top: 43.998%;
-      right: 35.905%;
-      border-radius: clamp(5px, 2vw, 20px);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
-
-    &__basket-text {
-      margin: 0;
-      font-family: $primary-font;
-      font-weight: 600;
-      font-size: clamp(10px, 3.5vw, 15.71px);
-      color: $c1-J;
+      top: 51%;
+      left: 24%;
     }
   }
 }
