--- a/src/components/Fixed menu/600px-1024px.scss
+++ b/src/components/Fixed menu/600px-1024px.scss
@@ -2,58 +2,33 @@
 
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
   .fixed-menu {
-    width: 8.723vw;
-    height: 8.723vw;
+    width: clamp(60.343px, 8.723vw, 100px);
+    height: clamp(60.343px, 8.723vw, 100px);
     background: $c1-H;
-    border-radius: 200px;
     border: 2px $c1-D solid;
+    border-radius: 100px;
+    cursor: pointer;
+    position: fixed;
+    bottom: clamp(15px, 4vw, 28px);
+    right: clamp(15px, 4vw, 28px);
+    z-index: 30;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
-    position: fixed;
-    bottom: clamp(25px, 4vw, 32px);
-    right: clamp(25px, 4vw, 32px);
-    z-index: 30;
 
-    &__icon-container-basket {
-      width: 100%;
-      height: 5.208vw;
-      margin: 0 2vw;
-      position: relative;
-      cursor: pointer;
+    &__icon {
+      width: 45.955%;
+      margin-bottom: 6%;
     }
 
-    &__icon-basket {
-      width: 80.015;
-      height: 76.6%;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-
-    &__basket-counter {
-      width: auto;
-      min-width: 18.179%;
-      height: 51.072%;
-      padding: 0 20%;
+    &__point {
+      width: clamp(9px, 2.083vw, 16px);
+      height: clamp(9px, 2.083vw, 16px);
+      border-radius: 100px;
       background: $c4-A;
       position: absolute;
-      top: 43.998%;
-      right: 35.905%;
-      border-radius: 2vw;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
-
-    &__basket-text {
-      margin: 0;
-      font-family: $primary-font;
-      font-weight: 600;
-      font-size: clamp(10px, 1.8vw, 15.71px);
-      color: $c1-J;
+      top: 51%;
+      left: 24%;
     }
   }
 }
